--- a/canopy.html
+++ b/canopy.html
@@ -321,6 +321,10 @@
               <span class="dot" onclick="currentSlide(2)"></span>
             </div>
           </div>
+          <h6>Digital</h6>
+          <div class="video-container">
+            <video src="videos/wireframe.mp4" controls></video>
+          </div>
          </article>
        </section>
        <!--<footer>
