--- a/canopy.html
+++ b/canopy.html
@@ -322,6 +322,12 @@
             </div>
           </div>
          </article>
+         <h6>Digital</h6>
+         <div class="video-container">
+           <video src="videos/wireframe.mp4" controls>
+
+           </video>
+         </div>
        </section>
        <!--<footer>
          <ul class="contacts">
