index background hover

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
        <section class="case-studies">
          <h2>canopy</h2>
          <h3>Cloud Storage App</h3>
-         <article class="project-background">
-          <a href="canopy.html"><figure><img class="canopy-home" src="images/canopy-dashboard.png" alt="canopy dashboard"></figure></a>
-         </article>
+         <div class="project-container">
+          <a href="canopy.html"><img class="project-image" src="images/canopy-dashboard.png" alt="canopy dashboard"></a>
+         </div>
          <h2>Capstone Project</h2>
          <h3>Book Recommendation App</h3>
-         <article class="project-background capstone">
-         <img class="canopy-home" src="images/canopy-dashboard.png" alt="canopy dashboard">
+         <article class="project-container capstone">
+         <img class="project-image" src="images/canopy-dashboard.png" alt="canopy dashboard">
          </article>
        </section>
        <footer>
