--- a/canopy.html
+++ b/canopy.html
@@ -323,11 +323,7 @@
           </div>
          </article>
          <h6>Digital</h6>
-         <div class="video-container">
-           <video src="videos/wireframe.mp4" controls>
-
-           </video>
-         </div>
+         <video src="videos/wireframe.mp4" controls></video>
        </section>
        <!--<footer>
          <ul class="contacts">
