added index hover and wireframe poster image

--- a/canopy.html
+++ b/canopy.html
@@ -323,7 +323,9 @@
           </div>
          </article>
          <h6>Digital</h6>
-         <video src="videos/wireframe.mp4" controls></video>
+         <video src="videos/wireframe.mp4" controls poster="images/wireframe-home.png"></video>
+
+         </video>
        </section>
        <!--<footer>
          <ul class="contacts">
