--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
          <h3>Cloud Storage App</h3>
          <div class="project-container">
           <a href="canopy.html"><img class="project-image" src="images/canopy-dashboard.png" alt="canopy dashboard"></a>
+          <div class="middle">
+            <span class="hover-text">View case study</span>
+          </div>
          </div>
          <h2>Capstone Project</h2>
          <h3>Book Recommendation App</h3>
