--- a/canopy.html
+++ b/canopy.html
@@ -321,12 +321,42 @@
               <span class="dot" onclick="currentSlide(2)"></span>
             </div>
           </div>
+          <h6>Digital</h6>
+          <video src="videos/wireframe.mp4" controls poster="images/wireframe-home.png"></video>
          </article>
-         <h6>Digital</h6>
-         <video src="videos/wireframe.mp4" controls poster="images/wireframe-home.png"></video>
-
-         </video>
+         <article class="subsection">
+           <h1>WIREFRAME TESTING</h1>
+           <p>After testing three potential users, I received some very useful
+             feedback that informed future iterations:</p>
+           <ul>
+            <li>The landing page was not comprehensive enough.</li>
+            <li>The upload/create buttons were in an odd location and should be
+              two different colors.</li>
+            <li>When a file is uploaded, the user should be taken to the new location</li>
+          </ul>
+         </article>
        </section>
+         <div class="section-label">
+           <span class="label">BRANDING</span>
+         </div>
+        <section class="Branding">
+          <article class="subsection">
+            <h1>THE BRAND</h1>
+            <p class="first-paragraph">The majority of my surveyed users were under 30 years old, so I wanted
+              to design a brand that felt sleek and modern. To differentiate my brand
+              from the competition, I integrated clean shapes and new colors into my designs.</p>
+            <p>canopy was chosen as the app’s name for a number of reasons. Canopies
+              mark the highest point of a forest, often residing amongst the clouds.
+              They nurture, enclose and protect an entire ecosystem, keeping the forest’s
+              life safe and secure. Similar to a canopy, a well designed cloud service should
+              nurture and protect users’ data. Many trees link up to form a canopy, just as many
+              files link up to form a cloud drive.</p>
+          </article>
+          <article class="subsection">
+            <h1>LOGO DESIGN</h1>
+            <h6>Brainstorming</h6>
+          </article>
+        </section>
        <!--<footer>
          <ul class="contacts">
            <li>
