--- a/canopy.html
+++ b/canopy.html
@@ -355,6 +355,20 @@
           <article class="subsection">
             <h1>LOGO DESIGN</h1>
             <h6>Brainstorming</h6>
+            <div class="slideshow-container">
+             <div class="image-container2">
+               <img src="images/dashboard-sketch.png" class="image fade" />
+             </div>
+             <div class="image-container2">
+               <img src="images/upload-sketch.png" class="image fade" />
+             </div>
+             <a class=" arrow prev" onclick="newSlide(-1)"></a>
+             <a class=" arrow next" onclick="newSlide(1)"></a>
+             <div class="dot-container">
+               <span class="dot2" onclick="currentSlide(1)"></span>
+               <span class="dot2" onclick="currentSlide(2)"></span>
+             </div>
+           </div>
           </article>
         </section>
        <!--<footer>
