--- a/canopy.html
+++ b/canopy.html
@@ -362,11 +362,11 @@
              <div class="image-container2">
                <img src="images/upload-sketch.png" class="image fade" />
              </div>
-             <a class=" arrow prev" onclick="newSlide(-1)"></a>
-             <a class=" arrow next" onclick="newSlide(1)"></a>
+             <a class=" arrow prev" onclick="newSlide2(-1)"></a>
+             <a class=" arrow next" onclick="newSlide2(1)"></a>
              <div class="dot-container">
-               <span class="dot2" onclick="currentSlide(1)"></span>
-               <span class="dot2" onclick="currentSlide(2)"></span>
+               <span class="dot2" onclick="currentSlide2(1)"></span>
+               <span class="dot2" onclick="currentSlide2(2)"></span>
              </div>
            </div>
           </article>
