--- a/canopy.html
+++ b/canopy.html
@@ -306,7 +306,7 @@
          </article>
          <article class="subsection">
            <h1>WIREFRAMES</h1>
-           <h6>Sketches</h6>
+           <h6 class="less-space">Sketches</h6>
            <div class="slideshow-container">
             <div class="image-container">
               <img src="images/dashboard-sketch.png" class="image fade" />
@@ -321,7 +321,7 @@
               <span class="dot" onclick="currentSlide(2)"></span>
             </div>
           </div>
-          <h6>Digital</h6>
+          <h6 class="less-space">Digital</h6>
           <video src="videos/wireframe.mp4" controls poster="images/wireframe-home.png"></video>
          </article>
          <article class="subsection">
@@ -339,7 +339,7 @@
          <div class="section-label">
            <span class="label">BRANDING</span>
          </div>
-        <section class="Branding">
+        <section class="branding">
           <article class="subsection">
             <h1>THE BRAND</h1>
             <p class="first-paragraph">The majority of my surveyed users were under 30 years old, so I wanted
@@ -354,13 +354,13 @@
           </article>
           <article class="subsection">
             <h1>LOGO DESIGN</h1>
-            <h6>Brainstorming</h6>
+            <h6 class="less-space">Brainstorming</h6>
             <div class="slideshow-container">
              <div class="image-container2">
-               <img src="images/dashboard-sketch.png" class="image fade" />
+               <img src="images/brainstorming-sketch.png" class="image fade" />
              </div>
              <div class="image-container2">
-               <img src="images/upload-sketch.png" class="image fade" />
+               <img src="images/logo-sketch.png" class="image fade" />
              </div>
              <a class=" arrow prev" onclick="newSlide2(-1)"></a>
              <a class=" arrow next" onclick="newSlide2(1)"></a>
@@ -369,7 +369,82 @@
                <span class="dot2" onclick="currentSlide2(2)"></span>
              </div>
            </div>
+           <h6 class="less-space">Digital</h6>
+           <p class="first-paragraph">Canopy’s logo was created by arranging three circles, three triangles and one
+             rectangle into a cloud shape. Triangles attached to circles at either end create
+             two leaves, representing the leaves of a canopy. The logo sits above the text,
+             much like a canopy exists at the top of the forest.</p>
+            <img class="full-width" src="images/digital-logos.svg" alt="digital logos">
           </article>
+          <article class="subsection">
+            <h1>COLOR PALETTE</h1>
+            <p class="first-paragraph">I went with a warm, monochromatic green color scheme to stand out from
+              the (mostly blue) competition.</p>
+            <img class="full-width space" src="images/color-palette.svg" alt="color palette">
+          </article>
+          <article class="subsection">
+            <h1>TYPOGRAPHY</h1>
+            <p class="first-paragraph">Poppins is a sans serif geometric typeface that creates a modern yet warm
+              atmosphere. Open Sans complements Poppins well as it is very readable and renders quite nicely on
+              the browser.</p>
+            <img class="typography space" src="images/typography.svg" alt="typography">
+          </article>
+        </section>
+        <div class="section-label">
+          <span class="label">VISUAL DESIGN</span>
+        </div>
+        <section class="visual-design">
+          <article class="subsection">
+            <h1>HI-FIDELITY MOCKUPS</h1>
+            <p>I coupled my wireframes and branding to create hi-fi mockups. Some features included:</p>
+            <ul>
+             <li>Modern homepage with a dark green background</li>
+             <li>Illustrations to add a warm, human element</li>
+             <li>Added product features, storage plans and testimonials to homepage</li>
+             <li>Sleek, simple log-in/sign-up screens</li>
+             <li>Dark sidebar on dashboard to provide contrast bewteen tab navigation and content</li>
+             <li>Large file previews to prioritize content, especially photos</li>
+           </ul>
+          <img class="full-width space" src="images/first-hifi-mockups.png" alt="first hifi mockups">
+          </article>
+          <article class="subsection">
+            <h1>PREFERENCE TESTING</h1>
+            <img class="full-width space" src="images/preference-A.png" alt="design A">
+            <h2 class="preference-h2">0%</h2>
+            <p class="first-paragraph">of users preferred this design. They thought the contrast between
+              the dark and light backgrounds was too stark.</p>
+            <img class="full-width space" src="images/preference-B.png" alt="design A">
+            <h2 class="preference-h2">100%</h2>
+            <p>of users preferred this design. They thought the dark-to-light green transition was easier
+              on the eyes.</p>
+          </article>
+        </section>
+          <div class="section-label">
+            <span class="label">FINAL TESTING AND PROTOTYPE</span>
+          </div>
+        <section class="final-testing">
+          <article class="subsection">
+            <h1>FINAL TESTING</h1>
+            <div class="slideshow-container">
+             <div class="image-container3">
+               <img src="images/new-folder-button.svg" class="image fade space" />
+             </div>
+             <div class="image-container3">
+               <img src="images/link-previews.svg" class="image fade space" />
+             </div>
+             <div class="image-container3">
+               <img src="images/share-star-shortcuts.svg" class="image fade space" />
+             </div>
+             <a class=" arrow prev three" onclick="newSlide3(-1)"></a>
+             <a class=" arrow next three" onclick="newSlide3(1)"></a>
+             <div class="dot-container">
+               <span class="dot3" onclick="currentSlide3(1)"></span>
+               <span class="dot3" onclick="currentSlide3(2)"></span>
+               <span class="dot3" onclick="currentSlide3(3)"></span>
+             </div>
+           </div>
+          </article>
+
         </section>
        <!--<footer>
          <ul class="contacts">
