--- a/canopy.html
+++ b/canopy.html
@@ -423,7 +423,7 @@
             <span class="label">FINAL TESTING AND PROTOTYPE</span>
           </div>
         <section class="final-testing">
-          <article class="subsection">
+          <article class="subsection less-margin">
             <h1>FINAL TESTING</h1>
             <div class="slideshow-container">
              <div class="image-container3">
@@ -444,7 +444,10 @@
              </div>
            </div>
           </article>
-
+          <article class="subsection">
+            <h1>FINAL PROTOTYPE</h1>
+            <video src="videos/wireframe.mp4" controls poster="images/landing-page-final.png"></video>
+          </article>
         </section>
        <!--<footer>
          <ul class="contacts">
