--- a/canopy.html
+++ b/canopy.html
@@ -322,7 +322,9 @@
             </div>
           </div>
           <h6 class="less-space">Digital</h6>
-          <video src="videos/wireframe.mp4" controls poster="images/wireframe-home.png"></video>
+          <div class="video-wrapper">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Wgfzx4MjMO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
          </article>
          <article class="subsection">
            <h1>WIREFRAME TESTING</h1>
@@ -446,7 +448,9 @@
           </article>
           <article class="subsection">
             <h1>FINAL PROTOTYPE</h1>
-            <video src="videos/wireframe.mp4" controls poster="images/landing-page-final.png"></video>
+            <div class="video-wrapper">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/9BaffltwRss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
           </article>
         </section>
        <!--<footer>
