--- a/canopy.html
+++ b/canopy.html
@@ -323,7 +323,7 @@
           </div>
           <h6 class="less-space">Digital</h6>
           <div class="video-wrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Wgfzx4MjMO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div style="padding:66.54% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/445915728?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
           </div>
          </article>
          <article class="subsection">
@@ -449,7 +449,7 @@
           <article class="subsection">
             <h1>FINAL PROTOTYPE</h1>
             <div class="video-wrapper">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/9BaffltwRss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div style="padding:66.54% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/445893799?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
             </div>
           </article>
         </section>
