--- a/canopy.html
+++ b/canopy.html
@@ -88,12 +88,16 @@
        </section>
        <section class="view-prototypes">
          <div class="mobile">
-           <img id="mobile-icon" src="images/mobile-icon.svg" alt="mobile icon">
-           <h3>View mobile prototype</h3>
+           <a href="https://www.figma.com/proto/tM6H6nA5pFDz5hoUUJzR0g/Hifi-mobile-prototype?node-id=1%3A6&viewport=719%2C462%2C1&scaling=scale-down" target="_blank">
+             <img id="mobile-icon" src="images/mobile-icon.svg" alt="mobile icon">
+             <h3>View mobile prototype</h3>
+           </a>
          </div>
          <div class="desktop">
-           <img id="desktop-icon" src="images/desktop-icon.svg" alt="desktop icon">
-           <h3>View desktop prototype</h3>
+           <a href="https://www.figma.com/proto/QCDV1WgBHQHsvmJACc9fKg/Hifi-Prototype?node-id=84%3A213&viewport=-651%2C507%2C0.13597111403942108&scaling=min-zoom" target="_blank">
+             <img id="desktop-icon" src="images/desktop-icon.svg" alt="desktop icon">
+             <h3>View desktop prototype</h3>
+          </a>
          </div>
        </section>
          <div class="section-label">
@@ -322,11 +326,9 @@
             </div>
           </div>
           <h6 class="less-space">Digital</h6>
-          <div class="video-wrapper">
             <div style="padding:66.54% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/445915728?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-          </div>
          </article>
-         <article class="subsection">
+         <article class="subsection under-video">
            <h1>WIREFRAME TESTING</h1>
            <p>After testing three potential users, I received some very useful
              feedback that informed future iterations:</p>
@@ -448,12 +450,46 @@
           </article>
           <article class="subsection">
             <h1>FINAL PROTOTYPE</h1>
-            <div class="video-wrapper">
               <div style="padding:66.54% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/445893799?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-            </div>
           </article>
         </section>
-       <!--<footer>
+        <section class="view-prototypes">
+          <div class="mobile">
+            <a href="https://www.figma.com/proto/tM6H6nA5pFDz5hoUUJzR0g/Hifi-mobile-prototype?node-id=1%3A6&viewport=719%2C462%2C1&scaling=scale-down" target="_blank">
+              <img id="mobile-icon" src="images/mobile-icon.svg" alt="mobile icon">
+              <h3>View mobile prototype</h3>
+            </a>
+          </div>
+          <div class="desktop">
+            <a href="https://www.figma.com/proto/QCDV1WgBHQHsvmJACc9fKg/Hifi-Prototype?node-id=84%3A213&viewport=-651%2C507%2C0.13597111403942108&scaling=min-zoom" target="_blank">
+              <img id="desktop-icon" src="images/desktop-icon.svg" alt="desktop icon">
+              <h3>View desktop prototype</h3>
+           </a>
+          </div>
+        </section>
+        <section class="reflection">
+          <article class=subsection>
+            <h1>REFLECTION</h1>
+            <p>Creating canopy was a tremendous learning experience for me as it was the first project that I worked on as lead designer. While I feel that canopy could succeed as a cloud service that centralizes users’ data in an intuitive and enjoyable way, there are a number of areas that I could improve upon. A short list includes:</p>
+            <ul>
+             <li>Include an onboarding flow for new users</li>
+             <li>Get more information on specific features users might want from user survey</li>
+             <li>More robust collaborative features</li>
+           </ul>
+           <h3 id="lessons">Lessons I learned:</h3>
+           <ul>
+            <li>Be purposeful with user testing. While it is important to test users on easy-to-do tasks, such as logging in, more difficult tasks can give a better idea on where the design is falling short and how to remedy those areas.</li>
+            <li>Make sure the design is consistently aligned with the user research. A designer’s ‘intuition’ can often cloud his thinking and cause him to overlook what the user actually wants.</li>
+          </ul>
+          </article>
+        </section>
+        <section class="other-work">
+          <article class="subsection centered">
+            <h1>OTHER WORK</h1>
+            <a href="#"><h6>Capstone Project</h6></a>
+          </article>
+        </section>
+      <footer>
          <ul class="contacts">
            <li>
              <img src="images/arrow-dark.svg" alt="arrow">
@@ -468,7 +504,7 @@
              <a href="My resume PDF">RESUME</a>
            </li>
          </ul>
-       </footer>-->
+       </footer>
      </div>
      <script src="javascript/projects.js"></script>
   </body>
