resolved errors and added comments to HTML files

--- a/canopy.html
+++ b/canopy.html
@@ -12,7 +12,11 @@
   </head>
 
   <body class="case-study">
+
+    <!-- Page container -->
      <div class="container">
+
+       <!-- Navigation -->
        <header class="nav">
          <a href="index.html">
            <div class="logos">
@@ -32,6 +36,8 @@
            </li>
          </ul>
        </header>
+
+       <!-- Project fold -->
        <section class="canopy-hero">
          <h1>canopy</h1>
          <h2>Cloud storage application that offers centralized storage in a smart, intuitive way.</h2>
@@ -39,6 +45,8 @@
           <img class="canopy-home-green" src="images/canopy-dashboard-green.png" alt="canopy dashboard">
          </div>
        </section>
+
+       <!-- Project specs -->
        <section class="colored">
          <div class="center">
            <div class="small-fourth align-left mobile-full">
@@ -86,23 +94,29 @@
            </div>
          </div>
        </section>
+
+       <!-- View Figma prototypes -->
        <section class="view-prototypes">
          <div class="mobile">
            <a href="https://www.figma.com/proto/tM6H6nA5pFDz5hoUUJzR0g/Hifi-mobile-prototype?node-id=1%3A6&viewport=719%2C462%2C1&scaling=scale-down" target="_blank">
-             <img id="mobile-icon" src="images/mobile-icon.svg" alt="mobile icon">
+             <img class="mobile-icon" src="images/mobile-icon.svg" alt="mobile icon">
              <h3>View mobile prototype</h3>
            </a>
          </div>
          <div class="desktop">
            <a href="https://www.figma.com/proto/QCDV1WgBHQHsvmJACc9fKg/Hifi-Prototype?node-id=84%3A213&viewport=-651%2C507%2C0.13597111403942108&scaling=min-zoom" target="_blank">
-             <img id="desktop-icon" src="images/desktop-icon.svg" alt="desktop icon">
+             <img class="desktop-icon" src="images/desktop-icon.svg" alt="desktop icon">
              <h3>View desktop prototype</h3>
           </a>
          </div>
        </section>
+
+       <!-- Section label -->
          <div class="section-label">
            <span class="label">OVERVIEW</span>
          </div>
+
+       <!-- Overview -->
        <section class="overview">
          <article class="subsection">
            <h1>THE PROBLEMS</h1>
@@ -132,10 +146,14 @@
             <img class="final-mockups" src="images/hifi-mockups-final.png" alt="final hifi mockups">
          </article>
        </section>
+
+       <!-- Section label -->
          <div class="section-label">
            <span class="label">DISCOVERY AND RESEARCH</span>
          </div>
-       <section class="discover-research">
+
+       <!-- Discovery and Research -->
+       <section class="discovery-research">
          <article class="subsection">
            <h1>USER SURVEY</h1>
            <p>While I made some assumptions on which features would improve
@@ -202,7 +220,7 @@
               </div>
             </section>
             <section class="persona">
-              <img class="persona-pic sophia"src="images/persona-sophia.jpg" alt="">
+              <img class="persona-pic sophia" src="images/persona-sophia.jpg" alt="">
               <div class="indent">
                 <h2>SOPHIA</h2>
                 <p class="demographic">26-year-old photographer from Dallas, TX</p>
@@ -236,7 +254,7 @@
               <h3>GOOGLE DRIVE SWOT ANALYSIS</h3>
               <div class="SWOT">
                 <div class="small-fourth align-left mobile-full">
-                  <h2 class"h4 align-left">STRENGTHS</h2>
+                  <h2 class="h4 align-left">STRENGTHS</h2>
                   <ul class="med-text">
                     <li>Clean, easy-to-navigate interface</li>
                     <li>Strong content creation</li>
@@ -244,7 +262,7 @@
                   </ul>
                 </div>
                 <div class="small-fourth align-left mobile-full">
-                  <h2 class"h4 align-left">WEAKNESSES</h2>
+                  <h2 class="h4 align-left">WEAKNESSES</h2>
                   <ul class="med-text">
                     <li>Security/privacy concerns</li>
                     <li>Some competitors offer more free storage</li>
@@ -252,14 +270,14 @@
                   </ul>
                 </div>
                 <div class="small-fourth align-left mobile-full">
-                  <h2 class"h4 align-left">OPPORTUNITIES</h2>
+                  <h2 class="h4 align-left">OPPORTUNITIES</h2>
                   <ul class="med-text">
                     <li>Rapidly growing demand for data storage</li>
                     <li>Many people switching to cloud storage</li>
                   </ul>
                 </div>
                 <div class="small-fourth align-left mobile-full">
-                  <h2 class"h4 align-left">THREATS</h2>
+                  <h2 class="h4 align-left">THREATS</h2>
                   <ul class="med-text">
                     <li>Rapidly growing competition</li>
                     <li>Many users have concerns with data safety</li>
@@ -273,9 +291,13 @@
               enabling web content organization and offering more free storage.</p>
           </article>
        </section>
+
+       <!-- Section label -->
          <div class="section-label">
            <span class="label">INFORMATION ARCHITECTURE</span>
          </div>
+
+       <!-- Information Architecture -->
        <section class="information-architecture">
          <article class="subsection">
            <h1>USER STORIES</h1>
@@ -313,10 +335,10 @@
            <h6 class="less-space">Sketches</h6>
            <div class="slideshow-container">
             <div class="image-container">
-              <img src="images/dashboard-sketch.png" class="image fade" />
+              <img src="images/dashboard-sketch.png" class="image fade" alt="dashboard sketch"/>
             </div>
             <div class="image-container">
-              <img src="images/upload-sketch.png" class="image fade" />
+              <img src="images/upload-sketch.png" class="image fade" alt="upload sketch"/>
             </div>
             <a class=" arrow prev" onclick="newSlide(-1)"></a>
             <a class=" arrow next" onclick="newSlide(1)"></a>
@@ -326,7 +348,7 @@
             </div>
           </div>
           <h6 class="less-space">Digital</h6>
-            <div style="padding:66.54% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/445915728?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+            <div style="padding:66.54% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/445915728?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
          </article>
          <article class="subsection under-video">
            <h1>WIREFRAME TESTING</h1>
@@ -340,9 +362,13 @@
           </ul>
          </article>
        </section>
+
+       <!-- Section label -->
          <div class="section-label">
            <span class="label">BRANDING</span>
          </div>
+
+        <!-- Branding -->
         <section class="branding">
           <article class="subsection">
             <h1>THE BRAND</h1>
@@ -361,10 +387,10 @@
             <h6 class="less-space">Brainstorming</h6>
             <div class="slideshow-container">
              <div class="image-container2">
-               <img src="images/brainstorming-sketch.png" class="image fade" />
+               <img src="images/brainstorming-sketch.png" class="image fade" alt="brainstorming sketch"/>
              </div>
              <div class="image-container2">
-               <img src="images/logo-sketch.png" class="image fade" />
+               <img src="images/logo-sketch.png" class="image fade" alt="logo sketch"/>
              </div>
              <a class=" arrow prev" onclick="newSlide2(-1)"></a>
              <a class=" arrow next" onclick="newSlide2(1)"></a>
@@ -394,9 +420,13 @@
             <img class="typography space" src="images/typography.svg" alt="typography">
           </article>
         </section>
+
+        <!-- Section label -->
         <div class="section-label">
           <span class="label">VISUAL DESIGN</span>
         </div>
+
+        <!-- Visual Design -->
         <section class="visual-design">
           <article class="subsection">
             <h1>HI-FIDELITY MOCKUPS</h1>
@@ -423,21 +453,25 @@
               on the eyes.</p>
           </article>
         </section>
+
+        <!-- Section label -->
           <div class="section-label">
             <span class="label">FINAL TESTING AND PROTOTYPE</span>
           </div>
+
+        <!-- Final Testing and Prototypes -->
         <section class="final-testing">
           <article class="subsection less-margin">
             <h1>FINAL TESTING</h1>
             <div class="slideshow-container">
              <div class="image-container3">
-               <img src="images/new-folder-button.svg" class="image fade space" />
+               <img src="images/new-folder-button.svg" class="image fade space" alt="new folder button"/>
              </div>
              <div class="image-container3">
-               <img src="images/link-previews.svg" class="image fade space" />
+               <img src="images/link-previews.svg" class="image fade space" alt="link previews"/>
              </div>
              <div class="image-container3">
-               <img src="images/share-star-shortcuts.svg" class="image fade space" />
+               <img src="images/share-star-shortcuts.svg" class="image fade space" alt="share/star shortcuts"/>
              </div>
              <a class=" arrow prev three" onclick="newSlide3(-1)"></a>
              <a class=" arrow next three" onclick="newSlide3(1)"></a>
@@ -450,23 +484,27 @@
           </article>
           <article class="subsection">
             <h1>FINAL PROTOTYPE</h1>
-              <div style="padding:66.54% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/445893799?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+              <div style="padding:66.54% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/445893799?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
           </article>
         </section>
+
+        <!-- View Figma prototypes -->
         <section class="view-prototypes">
           <div class="mobile">
             <a href="https://www.figma.com/proto/tM6H6nA5pFDz5hoUUJzR0g/Hifi-mobile-prototype?node-id=1%3A6&viewport=719%2C462%2C1&scaling=scale-down" target="_blank">
-              <img id="mobile-icon" src="images/mobile-icon.svg" alt="mobile icon">
+              <img class="mobile-icon" src="images/mobile-icon.svg" alt="mobile icon">
               <h3>View mobile prototype</h3>
             </a>
           </div>
           <div class="desktop">
             <a href="https://www.figma.com/proto/QCDV1WgBHQHsvmJACc9fKg/Hifi-Prototype?node-id=84%3A213&viewport=-651%2C507%2C0.13597111403942108&scaling=min-zoom" target="_blank">
-              <img id="desktop-icon" src="images/desktop-icon.svg" alt="desktop icon">
+              <img class="desktop-icon" src="images/desktop-icon.svg" alt="desktop icon">
               <h3>View desktop prototype</h3>
            </a>
           </div>
         </section>
+
+        <!-- Reflection -->
         <section class="reflection">
           <article class=subsection>
             <h1>REFLECTION</h1>
@@ -483,12 +521,16 @@
           </ul>
           </article>
         </section>
+
+        <!-- Other work -->
         <section class="other-work">
           <article class="subsection centered">
             <h1>OTHER WORK</h1>
             <a href="#"><h6>Capstone Project</h6></a>
           </article>
         </section>
+
+        <!-- Footer -->
       <footer>
          <ul class="contacts">
            <li>
@@ -501,7 +543,7 @@
            </li>
            <li>
              <img src="images/arrow-dark.svg" alt="arrow">
-             <a href="My resume PDF">RESUME</a>
+             <a href="#">RESUME</a>
            </li>
          </ul>
        </footer>
