--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
   </head>
 
   <body>
+
+    <!-- Page container -->
      <div class="container">
+
+       <!-- Navigation -->
        <header class="nav">
          <a href="index.html">
            <div class="logos">
@@ -32,6 +36,8 @@
            </li>
          </ul>
        </header>
+
+       <!-- Hero statement -->
        <section class="hero">
          <h1> <span class="hero-italic">Hello, I'm</span>
           <span class="about-me">
@@ -44,6 +50,8 @@
           </span>
             <span class="hero-italic">My work is inspired by </span><span class="carousel">architecture</span>.</h1>
        </section>
+
+       <!-- Case Studies -->
        <section class="case-studies">
          <h2>canopy</h2>
          <h3>Cloud Storage App</h3>
@@ -59,6 +67,8 @@
          <img class="project-image" src="images/canopy-dashboard.png" alt="canopy dashboard">
          </article>
        </section>
+
+       <!-- Footer -->
        <footer>
          <ul class="contacts">
            <li>
@@ -71,7 +81,7 @@
            </li>
            <li>
              <img src="images/arrow-dark.svg" alt="arrow">
-             <a href="My resume PDF">RESUME</a>
+             <a href="#">RESUME</a>
            </li>
          </ul>
        </footer>
