--- a/about.html
+++ b/about.html
@@ -34,14 +34,13 @@
        </header>
        <section class="about-me">
          <img class="about-image" src="images/about-pic-mobile.png" alt="pic of me">
-         <h1>I'm a product designer</h1>
-         <p>operating at the junction of simplicity and purpose to create digital experiences that elicit audible holy molies.
-            I grew up in Dallas, studied psychology and architecture at Tulane University, backpacked across Asia and Europe,
-            and found my way back to Dallas. Eager to continue my design education, I completed a product design apprenticeship
-             with Bloc. This experience allowed me to leverage my foundations in psychology and architecture and grow as a
-             user-centered designer operating in the digital realm. My design approach centers around merging data-validated user
-             experiences with thoughtful, clean interfaces. I believe that iterative design holds tremendous power to explore,
-             visualize and solve complex human issues.</p>
+         <h1>Hey, it's Max.</h1>
+         <h2>I love designing digital experiences that elicit audible holy molies.</h2>
+
+         <p>I grew up in Dallas, studied psychology and architecture at Tulane University, backpacked across Asia and Europe, and found my way back to Dallas. Eager to continue my design education, I completed a product design apprenticeship with Bloc. This experience allowed me to leverage my foundations in psychology and architecture and grow as a user-centered designer operating in the digital realm.</p>
+
+          <p>My design approach centers around merging data-validated user experiences with clean interfaces. I believe that thoughtful design holds tremendous power to explore, visualize and solve complex human issues.</p>
+
           <p class="free-time">In my free time, you can find me making art, living out my NBA dreams at the local rec center, honing my coding skills,
              and reassuring my dog that he’s a very good boy. Please reach out! I’d love to connect.</p>
        </section>
