--- a/about.html
+++ b/about.html
@@ -41,8 +41,10 @@
 
           <p>My design approach centers around merging data-validated user experiences with clean interfaces. I believe that thoughtful design holds tremendous power to explore, visualize and solve complex human issues.</p>
 
-          <p class="free-time">In my free time, you can find me making art, living out my NBA dreams at the local rec center, honing my coding skills,
-             and reassuring my dog that he’s a very good boy. Please reach out! I’d love to connect.</p>
+          <p>In my free time, you can find me making art, living out my NBA dreams at the local rec center, honing my coding skills,
+             and reassuring my dog that he’s a very good boy.</p>
+
+          <p class="free-time">Please reach out! I’d love to connect.</p>
        </section>
        <footer>
          <ul class="contacts">
