changing word animation

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <span class="projects">
             <a class="boxlink" href="#">digital&nbsp;experiences</a>.
           </span>
-            <span class="hero-italic">My work is inspired by </span><span class="carousel"></span>.</h1>
+            <span class="hero-italic">My work is inspired by </span><span class="carousel"><h3></h3></span></h1>
        </section>
 
        <!-- Case Studies -->
