--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
             <span class="hero-italic">I'm a product designer focused on
                 user-centered</span>
           <span class="projects">
-            <a class="boxlink" href="#">digital&nbsp;experiences</a>.
+            <a class="boxlink" href="#case-studies">digital&nbsp;experiences</a>.
           </span>
             <span class="hero-italic">My work is inspired by </span><span class="carousel"><h3></h3></span>.</h1>
        </section>
 
        <!-- Case Studies -->
-       <section class="case-studies">
+       <section id="case-studies">
          <h2>canopy</h2>
          <h3>Cloud Storage App</h3>
          <div class="project-container">
