--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
          </ul>
        </footer>
      </div>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="javascript/index.js"></script>
   </body>
 
 </html>
