--- a/about.html
+++ b/about.html
@@ -33,31 +33,34 @@
          </ul>
        </header>
        <section class="about-me">
-         <img class="about-image" src="images/about-pic-mobile.png" alt="pic of me">
-         <h1>Hey, it's Max.</h1>
-         <h2>I love designing digital experiences that elicit audible holy molies.</h2>
+         <img class="about-image-mobile" src="images/about-pic-mobile.png" alt="pic of me">
+         <div class="align-right">
+           <img class="about-image-desktop" src="images/about-pic-desktop.png" alt="pic of me">
+           <h3> <span class="italic">Young Designer with Large Feet,</span> 2020 </h3>
+         </div>
+         <div class="about-text">
+           <h1>I am a product designer</h1>
+           <h2>who loves making digital experiences that elicit audible holy molies.</h2>
 
-         <p>I grew up in Dallas, studied psychology and architecture at Tulane University, backpacked across Asia and Europe, and found my way back to Dallas. Eager to continue my design education, I completed a product design apprenticeship with Bloc. This experience allowed me to leverage my foundations in psychology and architecture and grow as a user-centered designer operating in the digital realm.</p>
+           <p>I grew up in Dallas, studied psychology and architecture at Tulane University, backpacked across Asia and Europe, and found my way back to Dallas. Eager to continue my design education, I completed a product design apprenticeship with Bloc. This experience allowed me to leverage my foundations in psychology and architecture and grow as a user-centered designer operating in the digital realm. My design approach centers around merging data-validated user experiences with clean interfaces. I believe that thoughtful design holds tremendous power to explore, visualize and solve complex human issues.</p>
 
-          <p>My design approach centers around merging data-validated user experiences with clean interfaces. I believe that thoughtful design holds tremendous power to explore, visualize and solve complex human issues.</p>
+            <p>In my free time, you can find me making art, living out my NBA dreams at the local rec center, honing my coding skills, and reassuring my dog that he’s a very good boy.</p>
 
-          <p>In my free time, you can find me making art, living out my NBA dreams at the local rec center, honing my coding skills,
-             and reassuring my dog that he’s a very good boy.</p>
-
-          <p class="free-time">Please reach out! I’d love to connect.</p>
+            <p class="free-time">Please <span><a href="mailto:maxschnitzer95@gmail.com">reach out!</a></span> I’d love to connect.</p>
+          </div>
        </section>
        <footer>
-         <ul class="contacts">
+         <ul class="contacts smaller-margin">
            <li>
              <img src="images/arrow-dark.svg" alt="arrow">
              <a href="mailto:maxschnitzer95@gmail.com">EMAIL</a>
            </li>
            <li>
-             <img src="images/arrow-dark.svg" alt="arrow">
+             <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
              <a href="linkedin.com">LINKEDIN</a>
            </li>
            <li>
-             <img src="images/arrow-dark.svg" alt="arrow">
+             <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
              <a href="My resume PDF">RESUME</a>
            </li>
          </ul>
