--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
          </div>
          <h2>Capstone Project</h2>
          <h3>Book Recommendation App</h3>
-         <article class="project-container capstone">
-         <img class="project-image" src="images/canopy-dashboard.png" alt="canopy dashboard">
-         </article>
+         <div class="project-container capstone">
+           <a href="#"><img class="project-image" src="images/canopy-dashboard.png" alt="canopy dashboard"></a>
+           <div class="middle">
+             <span class="hover-text">View case study</span>
+           </div>
+         </div>
        </section>
 
        <!-- Footer -->
@@ -76,11 +79,11 @@
              <a href="mailto:maxschnitzer95@gmail.com">EMAIL</a>
            </li>
            <li>
-             <img src="images/arrow-dark.svg" alt="arrow">
+             <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
              <a href="linkedin.com">LINKEDIN</a>
            </li>
            <li>
-             <img src="images/arrow-dark.svg" alt="arrow">
+             <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
              <a href="#">RESUME</a>
            </li>
          </ul>
